--- a/ariadne.cabal
+++ b/ariadne.cabal
@@ -38,3 +38,14 @@ executable ariadne-server
     containers >=0.4,
     Cabal >=1.18
   default-language:    Haskell2010
+
+executable ariadne-client
+  main-is: Ariadne/Client.hs
+  other-modules:
+  build-depends:
+    base >=4 && <5,
+    bert >=1.1,
+    utf8-string >=0.3,
+    bytestring >=0.10,
+    Cabal >=1.18
+  default-language:    Haskell2010
